--- a/package.yaml
+++ b/package.yaml
@@ -26,7 +26,7 @@ library:
   source-dirs: src
 
 executables:
-  c-analysis-light-exe:
+  cal-exe:
     main:                Main.hs
     source-dirs:         app
     ghc-options:
